--- a/src/resources/views/auth/register.twig
+++ b/src/resources/views/auth/register.twig
@@ -26,6 +26,7 @@
                                     Register
                                 </h2>
                                 <form method="post" action="/register">
+                                {{csrf.fields | raw}}
                                     <div class="form-outline form-white mb-4">
                                         <input type="text" 
                                                name="name"
