--- a/src/resources/views/categories/index.twig
+++ b/src/resources/views/categories/index.twig
@@ -24,11 +24,37 @@ window.addEventListener("DOMContentLoaded", function () {
     .querySelector(".save-category-btn")
     .addEventListener("click", function (event) {
         const categoryId = event.currentTarget.getAttribute("data-id");
+ 
 
         // TODO: Post update to the category
-        console.log(categoryId);
+        fetch(`/categories/${categoryId}`, {
+            method: 'POST',
+            body: JSON.stringify({
+                name: editCategoryModal._element.querySelector('input[name="name"]').value,
+                ...getCsrfFields()
+              }),
+            headers:{
+                'Content-Type': 'application/json'
+              }
+          })
+        .then((response) => (response.text())).then((response) => console.log(response));
         });
     });
+
+function getCsrfFields() {
+  const csrfNameField = document.querySelector("#csrf_name");
+  const csrfValueField = document.querySelector("#csrf_value");
+  const csrfNameKey = csrfNameField.getAttribute('name');
+  const csrfName = csrfNameField.content;
+
+  const csrfValueKey = csrfValueField.getAttribute('name');
+  const csrfValue = csrfValueField.content;
+
+  return {
+    [csrfNameKey]: csrfName,
+    [csrfValueKey]: csrfValue
+    };
+}
 
 function openEditCategoryModal(modal, { id, name }) {
   const nameInput = modal._element.querySelector('input[name="name"]');
